test/libyul/yulSyntaxTests/hex_assignment.yul
{
    let x := hex"0011"
}
// ----
// ParserError 6913: (25-26): Call or assignment expected.
